# sofia-pro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HANDOFF_SOFIA_PRO.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  anthropic_client.py  channel.py  dispatcher.py  evolution_client.py  openai_client.py  postgres_client.py  redis_client.py  supabase_client.py  telegram_client.py  webchat_client.py
app/api/: __init__.py  admin.py  appointments.py  calendar_oauth.py  health.py  webhook_telegram.py  webhook_web.py  webhook_whatsapp.py
app/core/: __init__.py  agente.py  agente_openai.py  appointment_extractor.py  appointment_flow.py  appointment_messages.py  campus_resolver.py  debounce.py  intent_classifier.py  learning_mode.py  oferta_resolver.py  orchestrator.py  output_guards.py  prompt_builder.py  repository.py  sales_funnel.py  scheduler.py  sofia_engine.py  state.py  state_extractor.py  validators.py
app/ingest/: __init__.py  chunker.py  cleaner.py  pipeline.py
app/integrations/: appointments.py  events.py  leads.py
app/kb/: sofia_kb_oficial.md
app/notifications/: email.py
app/observability/: __init__.py  costs.py  logger.py  metrics.py
app/tools/: __init__.py  becas.py  campus.py  (+9 more)
docs/: ARCHITECTURE.md  AUDIT_FACTUAL_DATA.md  DECISIONS.md  DEPLOYMENT.md  KB_GUIDE.md  PROMPTS_GUIDE.md
migrations/: 000_bootstrap_legacy.sql  001_init_schema.sql  002_volatile_knowledge.sql  003_feedback_and_legacy.sql  004_niveles_por_edad.sql  005_appointments_system.sql  006_campus_maps_and_appointment_link.sql  007_lead_child_grade.sql  008_qa_drift_fixes.sql  009_whatsapp_handoff.sql  010_whatsapp_humano.sql
scripts/: apply_migrations.py  consumo.py  deploy_easypanel.py  import_n8n_history.py  ingest_niveles_kb.py  seed_tables.py
tests/: conftest.py  test_appointment_extractor.py  test_appointment_flow.py  test_appointment_helpers.py  test_appointment_messages.py  test_availability_checker.py  test_campus_resolver.py  test_config.py  test_costs.py  test_debounce.py  test_dispatcher.py  test_evolution.py  test_ingest.py  test_intent_classifier.py  test_kb_niveles.py  test_known_bugs.py  test_learning_mode.py  test_logger.py  test_oferta_injection.py  test_orchestrator_appointment_wire.py  test_orchestrator_helpers.py  test_output_guards.py  test_prompt_builder.py  test_repository.py  test_state.py  test_state_extractor.py  test_telegram.py  test_tools.py  test_validators.py
(+71 files in other folders)
