[project]
name = "sofia-maple"
version = "0.1.0"
description = "Sofía 2.0 — Embajadora digital de admisiones de Maple Collège"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Oscar Rodríguez", email = "ing2oscar@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "supabase>=2.10.0",
    "psycopg[binary,pool]>=3.2.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.6",
    "jinja2>=3.1.4",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
    "fakeredis>=2.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length (handled by formatter)
    "B008", # function call in default arg (FastAPI Depends)
    # Caracteres "ambiguos" (em-dash —, en-dash –): son INTENCIONALES en este
    # código en español — el validador sin_guiones_largos y sus tests los DETECTAN
    # a propósito, y los comentarios en español los usan por estilo. No son error.
    "RUF001", # string contiene carácter ambiguo
    "RUF002", # docstring contiene carácter ambiguo
    "RUF003", # comentario contiene carácter ambiguo
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
    "golden: golden conversation regression tests (slow, expensive)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
